# usrsctp

./: CMakeLists.txt  README.txt  android_ifaddrs.c  ios_ip6.h  ios_udp.h  user_atomic.h  user_environment.c  user_inpcb.h  user_ip_icmp.h  user_recv_thread.c  user_socket.c  user_socketvar.h  usrsctp.h
netinet/: sctp_bsd_addr.c  sctp_constants.h  sctp_indata.c  sctp_input.c  sctp_os_userspace.h  sctp_output.c  sctp_pcb.c  sctp_pcb.h  sctp_sysctl.h  sctp_timer.c  sctp_userspace.c  sctp_usrreq.c  sctp_var.h
netinet6/: sctp6_usrreq.c
